Prevent link color flickering

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -133,7 +133,7 @@ a:not(.Navigation__link):not(.Title__link) {
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
   background-position: 0 88%;
-  transition: 250ms ease-in;
+  transition: background-size 250ms ease-in;
 }
 
 .dark a:not(.Navigation__link):not(.Title__link) {
